add react-select dependency

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mobservable": "1.2.2",
     "mobservable-react": "2.1.0",
     "react-bootstrap": "0.28.1",
+    "react-select": "1.0.0-beta13",
     "react-semantify": "0.4.3"
   },
   "browserify": {
