add momentJS dependency

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mobservable-react": "2.1.0",
     "react-bootstrap": "0.28.1",
     "react-select": "1.0.0-beta13",
-    "react-semantify": "0.4.3"
+    "react-semantify": "0.4.3",
+    "moment": "2.13.0"
   },
   "browserify": {
     "transform": [
