--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   },
   "homepage": "https://github.com/KAESapps/ks-admin#readme",
   "dependencies": {
-    "babel-preset-es2015": "6.1.18",
+    "babel-preset-es2015": "6.9.0",
     "babelify": "7.2.0",
     "lodash": "4.11.1",
     "mobservable": "1.2.2",
     "mobservable-react": "2.1.0",
+    "moment": "2.13.0",
     "react-bootstrap": "0.28.1",
     "react-select": "1.0.0-beta13",
-    "react-semantify": "0.4.3",
-    "moment": "2.13.0"
+    "react-semantify": "0.4.3"
   },
   "browserify": {
     "transform": [
