--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "moment": "2.13.0",
     "react-bootstrap": "0.28.1",
     "react-select": "1.0.0-beta13",
-    "react-semantify": "0.4.3"
+    "react-semantify": "0.4.3",
+    "shortid": "2.2.6"
   },
   "browserify": {
     "transform": [
