--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/KAESapps/ks-admin#readme",
   "dependencies": {
+    "assert-args": "1.2.1",
     "babel-preset-es2015": "6.9.0",
     "babelify": "7.2.0",
     "lodash": "4.11.1",
